Remembring last played file and pos in client. Hiding empty lists.

--- a/client/index.html
+++ b/client/index.html
@@ -19,13 +19,13 @@
                   <li class="breadcrumb-item active" aria-current="page">Home</li>
                 </ol>
         </nav>
-        <div>
+        <div id="subfolders-container">
             <h3>Subfolders <span class="badge badge-primary" id="subfolders-count"></span></h3>
             <ul class="list-group" id="subfolders">
             </ul>
 
         </div>
-        <div>
+        <div id="files-container">
                 <h3>Files <span class="badge badge-primary" id="files-count"></span></h3>
                 <ul class="list-group" id="files">
                 </ul>
