--- a/client/index.html
+++ b/client/index.html
@@ -38,6 +38,27 @@
             <audio controls="" preload="auto"></audio>
     </div>
 
+    <div class="modal" tabindex="-1" role="dialog" id="login-dialog">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Login to Audioserve</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <label>Provide shared secret:</label>
+              <input name="secret" type="password" id="secret-input">
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-primary" id="login-btn">Login</button>
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
         crossorigin="anonymous"></script>
