Search implemetation in the client

--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,16 @@
 
 <body>
     <div class="container" id="main">
-        <h1 class="top-header">Audioserve Client</h1>
+        <h1 class="top-header">
+            <span class="app-name">Audioserve Client</span>
+            <div id="search-btn" class="search"></div>
+            <div id="search-area">
+                <form id="search-form">
+                <input name="search" id="search-input" type="text" placeholder="Search">
+                </form>
+            </div>
+            
+        </h1>
         <nav aria-label="breadcrumb">
                 <ol class="breadcrumb" id="breadcrumb">
                   <li class="breadcrumb-item active" aria-current="page">Home</li>
